<resources>
    <string name="app_name">Quiz App</string>
    <string name="who_was_the_villian_in_the_avengers_first_movie">Who was the Villian in The Avengers (first movie) ?</string>
    <string name="thanos">Thanos</string>
    <string name="loki">Loki</string>
    <string name="thor">Thor</string>
    <string name="ultron">Ultron</string>
    <string name="question_1_5">Question 1/7</string>
    <string name="dr_doom">Dr Doom</string>
    <string name="who_is_the_first_avenger">Who is the first Avenger ?</string>
    <string name="captain_marvel">Captain Marvel</string>
    <string name="captain_america">Captain America</string>
    <string name="iron_man">Iron man</string>
    <string name="hulk">Hulk</string>
    <string name="question_2_5">Question 2/7</string>
    <string name="which_avenger_is_a_god">Which Avenger is a god ?</string>
    <string name="black_widow">Black Widow</string>
    <string name="black_panther">Black Panther</string>
    <string name="question_3_5">Question 3/7</string>
    <string name="question_4_5">Question 4/7</string>
    <string name="which_avenger_is_a_spy">Which Avenger is a spy ?</string>
    <string name="which_avenger_movie_did_the_villian_win">Which Avenger movie did the villian win ?</string>
    <string name="avengers_infinity_war">Avengers Infinity War</string>
    <string name="avengers_endgame">Avengers Endgame</string>
    <string name="avengers_age_of_ultron">Avengers Age Of Ultron</string>
    <string name="the_avenger">The Avenger</string>
    <string name="question_5_5">Question 5/7</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="which_characters_are_apart_of_the_avengers">Which characters are apart of the Avengers ?</string>
    <string name="wonder_women">Wonder Women</string>
    <string name="superman">Superman</string>
    <string name="dr_strange">Dr Strange</string>
    <string name="who_is_your_favorite_character_in_the_marvel_movies">Who is your favorite character in the marvel movies ?</string>
    <string name="question_6_7">Question 6/7</string>
    <string name="question_7_7">Question 7/7</string>
    <string name="which_avenger_has_a_infinity_stone_on_his_head">Which Avenger has a infinity stone on his head ?</string>
</resources>
